fixed z-index & pointer events for the dots to prevent acidental hits on the slider

--- a/dev/assets/css/main.sass
+++ b/dev/assets/css/main.sass
@@ -44,15 +44,16 @@ body
     position: relative
     overflow: hidden
     min-width: 320px
+    background-color: #333
 
      /* Game View */
     .game-view,
         width: 100vw
         height: 100vh
-        background-color: #333
         position: absolute
-        z-index: 1
+        z-index: 9
         opacity: 0
+        pointer-events: none;
 
     /* Start Screen */
     .start-lockup
